# ai_search

./: .gitignore  404.html  Dockerfile  README.md  compose.yaml  docker-compose-old.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  start_docker.sh  start_docker_local.sh  start_llm_service.sh  start_local.sh  start_structured_query_service.sh  start_training.sh  stop_local.sh
Documentation Bot/: index.html
Inference/: index.html
Ollama server/: index.html
Query processing LLM/: index.html
Rag Pipeline/: index.html
backend/: Dockerfile  __init__.py  backend.py  config.json  requirements.txt  selfquery.py  training.py
configuration/: index.html
data/: attribute_info.json
developer tutorials/: index.html
docker/: index.html
docs/: docker.md  index.md  inference.md  labelling_tool.md  query_llm.md  readme.md  testing.md  training.md
documentation_bot/: Dockerfile  README.md  base_urls.txt  documentation_query.py  documentation_query_utils.py  requirements.txt  run_crawler.py  utils.py
evaluation/: README.md  evaluate.py  evaluation_nb.ipynb  evaluation_results.csv  evaluation_utils.py  experiments.py  get_elastic_search_results.py  index.html  run_all_training.py  training_utils.py
frontend/: Dockerfile  feedback.json  paths.json  requirements.txt  ui.py  ui_utils.py  utils.py
inference/: index.html
llm_service/: Dockerfile  llm_service.py  llm_service_utils.py  requirements.txt
ollama/: Dockerfile  get_ollama.sh
openml_information_bot/: README.md  main.py  utils.py
search/: search_index.json
serving/: Dockerfile  get_ollama.sh  requirements.txt  run_backend.sh  supervisord.conf
site/: 404.html  index.html  objects.inv
structured_query/: Dockerfile  chroma_store_utilis.py  evaluation.ipynb  llm_service_structured_query.py  requirements.txt  (+3 more)
(+133 files in other folders)
