[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_search"
dynamic = ["version"] 

[tool.setuptools.packages.find]
where = [""]
include = ["backend*", "frontend*", "llm_service*"]
namespaces = false

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ai_search"]