[tool.poetry]
name = "ai-search"
version = "0.1.0"
description = ""
authors = ["SubhadityaMukherjee <msubhaditya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend", from = "." },
    { include = "frontend", from = "." },
    { include = "llm_service", from = "." },
    { include = "evaluation", from = "." },
]
[tool.poetry.dependencies]
python = "^3.10"
flashrank = "0.2.5"
pygments = "2.17.2"
aiofiles = "23.2.1"
chromadb = "0.5.0"
fastapi = "0.111.0"
httpx = "0.27.0"
langchain-community = "0.2.0"
langchain-elasticsearch = "0.2.2"
langchain-openai = "0.1.7"
langchain-text-splitters = "0.2"
langchain = "0.2.0"
langchainhub = "0.1.20"
locust = "2.29.0"
mkdocs-autorefs = "1.0.1"
mkdocs-awesome-pages-plugin = "2.9.2"
mkdocs-get-deps = "0.2.0"
mkdocs-jupyter = "0.24.7"
mkdocs-material-extensions = "1.3.1"
mkdocs-material = "9.5.20"
mkdocs-redirects = "1.2.1"
mkdocs = "1.6.0"
mkdocstrings-python = "1.10.4"
mkdocstrings = "0.25.1"
mknotebooks = "0.8.0"
openml = "0.14.1"
oslo-concurrency = "6.0.0"
pandas = "2.2.2"
pqdm = "0.2.0"
sentence-transformers = "2.7.0"
streamlit-feedback = "0.1.3"
streamlit = "1.36.0"
tenacity = "8.3.0"
torch = "2.3.0"
tqdm = "4.66.4"
urllib3 = "1.26.19"
uvicorn = "0.29.0"
poetry = "1.8.3"
protobuf = "3.20.0"
langchain-ollama = "0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
